--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ pytest
 pylint==2.15.5
 black==22.10.0
 click>=8.0
+kaggle==1.5.12
+numpy==1.23.5
+pandas==1.5.2
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
