--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ matplotlib-inline==0.1.6
 transformers==4.25.1
 datasets==2.7.1
 evaluate==0.4.0
+#deep learning
+torch==1.12.1
+torchvision==0.13.1
+scikit-learn==1.1.2
