--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,45 @@
-name: Python application test with Github Actions using devcontainers
-on: [push]
+name: Python application
+on: 
+  push:
+    branches:
+      - main
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: make all
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    - name: set up python
+      uses: actions/setup-python@v3
+      with: 
+        python-version: "3.10"
+
+    # - name: Configure AWS credentials
+    #   uses: aws-actions/configure-aws-credentials@v1
+    #   with:
+    #     aws-region: us-east-1
+    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+
+    - name: Install
       run: |
         make install
-        make lint
-        make test
+    - name: Format
+      run: |
         make format
+    - name: Lint
+      run: |
+        make lint
+      
+    - name: Test
+      run: |
+        make test
+  
+    # - name: Deploy
+    #   run: |
+    #     make deploy
