--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ sentencepiece==0.1.97
 git+https://github.com/makcedward/nlpaug.git
 git+https://github.com/PrithivirajDamodaran/Parrot_Paraphraser.git
 protobuf==3.20.0
+gradio==3.13.0
